# webserv

./: .gitignore  CMakeLists.txt  Makefile  README.md  save.it
Client/: Client.cpp  Client.hpp  Makefile  main.cpp
config/: 42tester.conf  ego.conf  mizola.conf  popy  sbashir.conf  test.conf  ttamesha.conf  ttamesha_home.conf  ttamesha_regex.conf
config/error_pages/: 403.html  404.html
include/: Cgi.h  Cgi.hpp  Client.h  FD.h  FD.hpp  GetMethod.h  Location.h  Location.hpp  Parser.h  Parser.hpp  PostMethod.h  Request.h  Response.hpp  ServConfig.h  ServConfig.hpp  Server.h  Server.hpp  SharedPtr.h  base64.h  defines.h  includes.h  king_Response.hpp  method_utils.h  methods.h  mimeTypes.h  moh_Response.h  response.h  response_generator.h  returnCodes.h  utils.h  utils.hpp
src/: Cgi.cpp  Client.cpp  DeleteMethod.cpp  FD.cpp  GetMethod.cpp  HeadMethod.cpp  Location.cpp  MethodGet.cpp  MimeTypes.cpp  Parser.cpp  PostMethod.cpp  PutMethod.cpp  Request.cpp  Response.cpp  Response.hpp  ServConfig.cpp  ServConfig_bonus.cpp  Server.cpp  base64.cpp  initMimeType.cpp  king_Response.cpp  main.cpp  method_utils.cpp  methods.cpp  moh_Response.cpp  response.cpp  response_generator.cpp  tmpFunctionForResponse.cpp  utils.cpp
test/: Makefile  PostTest.py  exampleServer.cpp  request.http  request_chunked.http  request_chunked_p1.http  request_chunked_p2.http  request_p1.http  request_p2.http  supertester.sh  test.cpp  testServer.cpp  test_parser.cpp
www/: index.html  kek.go  list.php  main.py  popo.php  recall.php  rgdindex.html
www/YoupiBanane/: hello.php  index.html
www/cgi/: index.html  index.php  index.py
www/error_pages/: 404.html  405.html  500.html
www/hello/: index.html  style.css
www/script/: script.js
www/style/: style.css
